--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: notification-app
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://my-db-postgresql:5432/postgres
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: 123456
