--- a/helm/demo-helm/templates/ingress.yaml
+++ b/helm/demo-helm/templates/ingress.yaml
@@ -8,14 +8,7 @@ spec:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: {{ .Values.ingress.path.person }}
-            pathType: {{ .Values.ingress.pathType }}
-            backend:
-              service:
-                name: {{ .Values.service.nameApp }}
-                port:
-                  number: {{ .Values.service.port }}
-          - path: {{ .Values.ingress.path.health }}
+          - path: {{ .Values.ingress.path.notification }}
             pathType: {{ .Values.ingress.pathType }}
             backend:
               service:
