--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     enabled: true
     change-log: classpath:changelog/db.changelog-master.yaml
   kafka:
-    bootstrap-servers: localhost:29092
+    bootstrap-servers: kafka.default.svc.cluster.local:9092
     consumer:
       group-id: "order-2"
       auto-offset-reset: earliest
